--- a/Project.Module/Project.Module.csproj
+++ b/Project.Module/Project.Module.csproj
@@ -30,6 +30,9 @@
     <None Remove="Settings\**" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="DatabaseUpdate\SafeUpdater.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Project.Module.csproj.old" />
     <None Remove="Project.Module.csproj.vspscc" />
   </ItemGroup>
@@ -58,7 +61,11 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="DatabaseUpdate\SafeUpdater.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Npgsql" Version="8.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PromAktiv.Core.Branches">
